# pallet-stateful-multisig

./: Cargo.toml  README.md
multisig/: Cargo.toml
multisig/src/: impls.rs  lib.rs  mock.rs  tests.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
